<resources>
    <string name="app_name">ProjectEvaluator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Cerrar sesión</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_evaluator">Evaluadores</string>
    <string name="menu_students">Alumnos</string>
    <string name="menu_projects">Proyectos</string>
    <string name="menu_results">Resultados</string>
    <string name="menu_about">Acerca de</string>
    <string name="spinner_default">Selecciona una opción</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>