<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navInicio"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/fragProfile"
            android:icon="@drawable/person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/fragEvaluador"
            android:icon="@drawable/groups"
            android:title="@string/menu_evaluator" />
        <item
            android:id="@+id/fragProyecto"
            android:icon="@drawable/task"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/fragResultados"
            android:icon="@drawable/grade"
            android:title="@string/menu_results" />
        <item
            android:id="@+id/fragInfo"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
    </group>
</menu>